# TECO

./: .gitignore  .gitmodules  CLAUDE.md  NOTES.md  PLAN.md  README.md  pyproject.toml  scratch.py  teco.toml.example
teco/: cli.py  config.py
teco/agents/: base.py  experimenter.py  learner.py  optimizer.py  reflector.py
teco/knowledge/: schema.py  store.py
teco/orchestration/: context.py  loop.py
teco/reporting/: __init__.py  console.py  html_report.py  tracker.py
teco/tools/: code_editor.py  compiler.py  profiler.py  search.py
tests/: test_compiler.py  test_knowledge_store.py  test_profiler.py  test_reporting.py
