[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teco"
version = "0.1.0"
description = "The Experienced Code Optimizer — agentic GPU kernel optimizer with learned experience"
requires-python = ">=3.11"
dependencies = [
    "smolagents>=1.0",
    "anthropic>=0.40",
    "torch>=2.0",
    "triton>=3.0",
    "nvidia-ml-py>=12.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "httpx>=0.27",        # doc fetching (LearnerAgent)
    "ruamel.yaml>=0.18",  # round-trip YAML for pattern/lesson files
]

[project.scripts]
teco = "teco.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "numpy>=1.26",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
